@@ -1,0 +1,1 @@
+{foo => 'config.conf', bar => 'config.conf'};
